--- a/css/_common.scss
+++ b/css/_common.scss
@@ -4,6 +4,7 @@
     - 共通
 =================== */
 
+// SP
 @media (max-width: 550px) {
     .pc{
         display: none;
@@ -40,11 +41,18 @@ a:hover{
 /* Button
 ------------------------------------------------------------*/
 @mixin button($bgcolor, $fntcolor, $lnecolor: null){
-    width: 180px;
+    width: 200px;
     height: 40px;
     background-color: $bgcolor;
     color: $fntcolor;
     border: 1px $lnecolor solid;
+}
+
+/* Categorie
+------------------------------------------------------------*/
+@mixin cat($color){
+    border-left:5px solid $gold;
+    padding: 5px 24px;
 }
 
 /* Fonts
