--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,6 @@ html {
     - 00. デフォルト
 ================================================= */
 body {
-  min-width: 80px;
   background-color: #f7f3f3;
   font-size: 12px;
   font-size: 1.2rem;
@@ -261,12 +260,13 @@ body {
     font-size: 2.2rem;
     letter-spacing: 2px;
     font-family: "Sitka Small";
-    margin-top: 60px;
+    padding-top: 30px;
     margin-bottom: 30px; }
   @media (min-width: 551px) {
     body h3 {
       font-size: 34px;
       font-size: 3.4rem;
+      padding-top: 50px;
       letter-spacing: 6px; } }
 
 /* ================================================
@@ -358,8 +358,10 @@ footer .ms {
 .eyecatch {
   background-image: url("../img/top/img_eyecatch_top.jpg");
   background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
   box-sizing: border-box;
-  height: 600px;
+  height: 660px;
   padding-top: 100px; }
   .eyecatch h5 {
     font-size: 14px;
@@ -692,11 +694,10 @@ footer .ms {
 .eyecatch_wk {
   background-image: url("../img/works/img_eyecathc_dtl.jpg");
   background-size: cover;
-  background-position: center;
+  background-attachment: fixed;
   box-sizing: border-box;
   height: 300px;
-  padding-top: 156px;
-  padding-left: 2rem; }
+  padding-top: 156px; }
   .eyecatch_wk h2 {
     font-size: 32px;
     font-size: 3.2rem;
@@ -770,6 +771,16 @@ footer .ms {
       font-size: 1.2rem;
       width: 90%;
       margin: auto; } }
+.capture {
+  width: 100%;
+  margin-bottom: 30px; }
+  .capture .pcsht {
+    width: 90%;
+    border: 2px solid #e6ddc5;
+    margin-bottom: 10px; }
+  .capture .spsht {
+    width: -webkit-calc(100% / 3.5); }
+
 @media (min-width: 551px) {
   .eyecatch_wk {
     height: 500px;
@@ -801,27 +812,26 @@ footer .ms {
     border: 1px #c7aa66 solid; }
 
   .workinf {
-    margin-top: 30px;
+    margin-top: 50px;
     padding: 40px;
     box-sizing: border-box; }
-    .workinf table {
-      margin: auto;
-      width: 90%;
-      border-collapse: separate;
-      border-spacing: 0px 8px;
-      letter-spacing: 1px; }
-      .workinf table th, .workinf table td {
-        border-bottom: none;
-        padding-left: 30px; }
-      .workinf table th {
-        border-right: 1px solid #000b29;
-        width: 40%; }
-      .workinf table td {
-        width: 60%; }
+    .workinf table th, .workinf table td {
+      border-bottom: none;
+      padding-left: 30px; }
+    .workinf table th {
+      border-right: 1px solid #000b29;
+      width: 40%; }
+    .workinf table td {
+      width: 60%; }
     .workinf p {
       font-size: 12px;
       font-size: 1.2rem;
       width: 90%;
-      margin: auto; } }
+      margin: auto; }
+
+  .capture {
+    margin-bottom: 80px; }
+    .capture .pcsht {
+      margin-bottom: 20px; } }
 
 /*# sourceMappingURL=style.css.map */
