--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,6 @@
 ================================================= */
 
 body {
-    min-width: 80px;
     background-color: $light;
     @include fontsize(12);
     text-align: center;
@@ -17,12 +16,13 @@ body {
         @include fontsize(22);
         letter-spacing: 2px;
         font-family: "Sitka Small";
-        margin-top: 60px;
+        padding-top: 30px;
         margin-bottom: 30px;
     }
     @media (min-width: 551px) {
         h3{
             @include fontsize(34);
+            padding-top: 50px;
             letter-spacing: 6px;
         }
     }
@@ -157,8 +157,10 @@ footer{
 .eyecatch{
     background-image: url("../img/top/img_eyecatch_top.jpg");
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
     box-sizing: border-box;
-    height: 600px;
+    height: 660px;
     padding-top: 100px;
     
     h5{
@@ -556,15 +558,14 @@ footer{
 .eyecatch_wk{
     background-image: url("../img/works/img_eyecathc_dtl.jpg");
     background-size: cover;
-    background-position: center;
+    background-attachment: fixed;
+    // background-position: center;
     box-sizing: border-box;
     height: 300px;
     padding-top: 156px;
-    padding-left: 2rem;
     h2{
         @include fontsize(32);
         margin: 0;
-        // text-align: left;
     }
 }
 
@@ -652,6 +653,20 @@ footer{
 }
 
 
+// CAPTURE
+.capture{
+    width: 100%;
+    margin-bottom: 30px;
+    .pcsht{
+        width: 90%;
+        border: 2px solid $khaki;
+        margin-bottom: 10px;
+    }
+    .spsht{
+        width:-webkit-calc(100% / 3.5);
+    }
+}
+
 // PC
 @media (min-width: 551px) {
     // EYECATCH
@@ -693,30 +708,19 @@ footer{
 
     // WORK INFOMAION
     .workinf{
-        margin-top: 30px;
+        margin-top: 50px;
         padding: 40px;
         box-sizing: border-box;
         table{
-            margin: auto;
-            width: 90%;
-            border-collapse: separate;
-            border-spacing: 0px 8px;
-            letter-spacing: 1px;
-            // tr{
-            //     padding-bottom: 10px;
-            // }
             th, td{
                 border-bottom: none;
-                // padding: 5px 10px;
                 padding-left: 30px;
             }
             th{
-                // background-color: $gray;
                 border-right: 1px solid $night;
                 width:40%;
             }
             td{
-                // background-color: $light;
                 width:60%;
             }
         }
@@ -726,4 +730,13 @@ footer{
             margin: auto;
         }
     }
+
+    // CAPTURE
+    .capture{
+        .pcsht{
+            margin-bottom: 20px;
+        }
+        margin-bottom: 80px;
+    }
+
 }
